--- a/Week 15/Week 15.2/1. Layers.md
+++ b/Week 15/Week 15.2/1. Layers.md
@@ -3,12 +3,16 @@
 - **Layers** are the building blocks of Docker images.
 - Each layer is a set of changes to the filesystem.
 
-### How Layers are made?
+---
+
+## How Layers are made?
 
 - **Base Image**: The first layer is the base image. It is the foundation of the image.
 - **Dockerfile Commands**: Each command in the Dockerfile adds a new layer to the image.
 
-### Layers Features
+---
+
+## Layers Features
 
 1. **Union File System**: Docker uses a Union File System to combine layers into a single image.
 2. **Copy-on-write**: When you run a container, Docker uses a copy-on-write strategy to create a new container layer from the image layers.
@@ -16,6 +20,8 @@
 4. **Layer Reuse**: If you build a new image from an existing image, Docker reuses the layers from the existing image.
 5. **Layer Sharing**: If you push an image to a registry, Docker only pushes the layers that are not already in the registry.
 6. **Layer Immunity**: Once a layer is created, it is immutable. You cannot change a layer once it is created.
+
+---
 
 ## Seeing Layers in Action
 
@@ -52,27 +58,32 @@
    ```bash
    docker history 100x-node
    ```
+   <img width="907" alt="Screenshot 2024-03-10 at 7 26 20 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/bc38c6d5-b04c-4112-96fc-31269451d382">
 
    > Notice how each command in the Dockerfile shows a creation of a new layer in the logs.
 
    <br>
 
 3. Try running the build command again.
+   <img width="1050" alt="Screenshot 2024-03-10 at 7 30 43 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/bdd28318-d8d0-415d-bcc4-ccc6430dd68f">
 
    > Notice how Docker reuses the layers from the cache.
-
+   
    <br>
 
-**Diving Deeper**
+   **Diving Deeper**
+   Try changing the `src/index.ts` file and running the build command again.
+   > Notice how Docker reuses the layers from the cache until the `COPY` command. This is because the `COPY` command invalidates the cache.
 
-- Try changing the `src/index.ts` file and running the build command again.
-  > Notice how Docker reuses the layers from the cache until the `COPY` command. This is because the `COPY` command invalidates the cache.
+---
 
 ## Why are Layers Important?
 
 - Layers Reusing: Layers are reused across images and builds **which makes the build process faster**.
 
 - Layer Caching: Docker caches layers to speed up the build process.
+
+---
 
 ## Optimizing Dockerfile
 
