--- a/Week 15/Week 15.2/4. docker-compose.md
+++ b/Week 15/Week 15.2/4. docker-compose.md
@@ -78,5 +78,5 @@
 
 <p align="center">You have successfully used Docker Compose to run multi-container applications.</p>
 <p align="center">
-     
+     <img width="1432" alt="Screenshot 2024-03-10 at 9 41 32 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/2ea0fafd-b159-46ae-952a-ba3806b864e2">
 </p>
