--- a/Week 16/Week 16.1/1. MonoRepos.md
+++ b/Week 16/Week 16.1/1. MonoRepos.md
@@ -26,4 +26,5 @@
 - If the project structure is complex and the code is shared between different parts of the project.
 
 ## Most Common folders in a MonoRepo
+<img width="1000" alt="1" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/396bb0c4-4b1e-43e5-963c-ce527ac3c1c2">
 
