Update 1. Rate Limiting.md

--- a/Week 21/Week 21.1/1. Rate Limiting.md
+++ b/Week 21/Week 21.1/1. Rate Limiting.md
@@ -60,6 +60,9 @@ A strategy used to control the amount of incoming and outgoing traffic to or fro
 
 5. Check the logs in the terminal to see the OTP generated.
 
+   <img width="1132" alt="Screenshot 2024-04-20 at 7 31 57 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/22030d75-5e62-46be-9c5b-866048a8410a">
+
+
 <br>
 
 6. Send a POST request to `http://localhost:3000/reset-password` with the following body:
@@ -71,6 +74,9 @@ A strategy used to control the amount of incoming and outgoing traffic to or fro
      "password": "newpassword"
    }
    ```
+
+   <img width="1132" alt="Screenshot 2024-04-20 at 7 34 48 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/fafa9b57-c923-443e-b4d0-8e5188a779a6">
+
 
 ---
 
@@ -170,17 +176,23 @@ A strategy used to control the amount of incoming and outgoing traffic to or fro
 
 8. Click on the `Code` button on the right side of the screen. Select the language as `Node.js` and copy the code.
 
-9. Copy the code and paste it in the `pen-testing/attack/src/index2.ts` file.
+   <img width="500" alt="Screenshot 2024-04-20 at 7 38 40 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/0cad6c56-2609-4f76-8ea2-4b22cc034439">
 
-10. Modify the request to accept multiple OTPs.
 
-11. Run the attack's code using `npm run prod-attack`.
+10. Copy the code and paste it in the `pen-testing/attack/src/index2.ts` file.
+
+11. Modify the request to accept multiple OTPs.
+
+12. Run the attack's code using `npm run prod-attack`.
 
     > Note: Make sure to generate an otp by going to the website and clicking on the `Reset Password` button.
 
-12. Check the server logs to see the requests being made.
+13. Check the server logs to see the requests being made.
 
 **Expected Behaviour**: The server should block the requests after a certain number of requests.
+
+<img width="800" alt="Screenshot 2024-04-20 at 9 27 45 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/ab41736e-3c3a-4c78-8bca-02c7ea4d44d5">
+
 
 ---
 
@@ -197,3 +209,9 @@ A strategy used to control the amount of incoming and outgoing traffic to or fro
 5. Run the backend with rate limiting enabled using `npm run with-rl`.
 
 6. Test the rate limiting by sending multiple requests to the `/reset-password` endpoint using `npm run local-attack` command from `/pen-testing/attack` terminal.
+
+<br>
+
+   ### <p align="center">Congratulations! You have successfully implemented rate limiting on your backend. </p>
+
+<img width="1132" alt="Screenshot 2024-04-20 at 9 51 03 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/fa7b2411-2928-4eb4-a74d-3ca8a3d81037">
