Update 2. DDoS Prevention.md

--- a/Week 21/Week 21.1/2. DDoS Prevention.md
+++ b/Week 21/Week 21.1/2. DDoS Prevention.md
@@ -1,5 +1,8 @@
 ## Preventing DDoS Attacks
 
+   <p align="center"><img width="700" alt="Screenshot 2024-04-20 at 9 52 42 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/b432db10-efeb-495a-95e7-551f3046301c"></p>
+
+
 - Rate Limiting can still not prevent DDoS attacks.
 - DDoS attacks can be used to overwhelm a server with requests from multiple sources (**distributed** denial of service).
 
@@ -9,13 +12,21 @@
 
 ### Method 1: Using Captchas
 
+<p align="center"><img width="600" alt="Screenshot 2024-04-20 at 8 31 16 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/3fd5a290-361c-40f1-853e-309939d5b0ba"></p>
+
+
 1. Go to the [Cloudflare](https://www.cloudflare.com/en-in/) dashboard.
 
 2. Click on `TurnStile` tab.
+   <img width="600" alt="Screenshot 2024-04-20 at 9 55 52 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/6890c7c6-1a96-443c-be9c-197eec8138e7">
 
 3. Add your site and domain for which you want to add the captcha.
+   <img width="600" alt="Screenshot 2024-04-20 at 9 58 51 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/f0f9b890-2f8d-44d2-a6f6-acd5a3cd4baf">
+   <img width="600" alt="Screenshot 2024-04-20 at 9 59 27 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/a86d794b-487f-4514-92d4-d8ea233de71f">
 
 4. You will have your site `key` and `secret` generated for you.
+   <img width="600" alt="Screenshot 2024-04-20 at 9 59 36 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/06cf0334-a94d-490a-8a79-2f60e2567185">
+
 
 5. Now, create a new frontend react project or just go to `/using-captcha/src/App.tsx`.
 
