Update 2. DDoS Prevention.md

--- a/Week 21/Week 21.1/2. DDoS Prevention.md
+++ b/Week 21/Week 21.1/2. DDoS Prevention.md
@@ -99,6 +99,11 @@
 
 12. You will see a captcha that you need to solve to reset the password.
 
+### <p align="center">Congratulations! You have enabled captcha! on your site! </p>
+
+<img width="1582" alt="Screenshot 2024-04-20 at 11 51 43 PM" src="https://github.com/its-id/100x-Cohort-Programs/assets/60315832/65d95e18-0c19-4be7-a7cd-65e8fa01172d">
+
+
 ### Method 2: Using Cloudflare proxies
 
 **How these services work?**
@@ -118,3 +123,4 @@
 4. Proxy your site through Cloudflare.
 
 5. Generally, this much is enough, but if you want more security you can also add `Rate Limiting` and `Firewall Rules`.
+
